Add new MAP color
ignore flag icon

--- a/css/style.css
+++ b/css/style.css
@@ -1183,7 +1183,7 @@ nav .navbar-nav li a {
 }
 
 #infopages.page-gektar .page-info-left .map__item {
-    fill: #52b458;
+    fill: #e5e5e5;
     stroke: #fff;
     stroke-miterlimit: 10;
     stroke-opacity: 0.5;
