--- a/css/style.css
+++ b/css/style.css
@@ -5412,7 +5412,7 @@ background: #a7cb6f url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbm
 
 	.box-opros .labelscroll {
 		overflow-y: visible;
-		height: auto;
+		max-height: none;
 	}
 
 	.blk-cards a.mp-newsblk .mp-tn-icons,
