--- a/css/style.css
+++ b/css/style.css
@@ -574,7 +574,6 @@ header.active {
 
 #nav-fixed .mp-frstnav ul {
 	margin: 0;
-	padding: 0;
 }
 
 .h-logo a {
@@ -978,7 +977,8 @@ nav .navbar-nav li a {
 	color: #262626;
 	font-size: 13px;
 	margin: 0 15px;
-	padding: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	text-align: center;
 }
 
@@ -1963,6 +1963,11 @@ a.mp-newsblk:hover .img-black-bg img {
 	overflow-y: scroll;
 }
 
+#newslist .box-opros .labelscroll {
+	max-height: auto;
+	overflow-y: visible;
+}
+
 .blk-cards {
 
 }
@@ -2934,6 +2939,7 @@ h1.tp-title {
 	float: right;
 	padding: 20px 20px 5px !important;
 	width: 380px;
+	background: #daecf7;
 }
 
 #servicelist .news-search {
@@ -5061,6 +5067,10 @@ background: #a7cb6f url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbm
 
 @media screen and (max-width: 480px) {
    
+	#nav-fixed .mp-frstnav ul {
+		padding: 0;
+	}
+
 	#infopages.page-gektar {
 		margin-top: 150px;
 	}
@@ -5171,7 +5181,7 @@ background: #a7cb6f url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbm
 	}
 
 	#main-g-page {
-		margin-top: 120px;
+		margin-top: 150px;
 	}
 
 	#main-g-page .main-g-slogan h2 {
@@ -5342,11 +5352,10 @@ background: #a7cb6f url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbm
 	}
 
 	.mp-secnav.test {
-		border: 3px solid #a7cb6f;
 		color: #262626;
-		margin: 150px 15px 0;
-		padding-bottom: 10px;
-		padding-top: 10px;
+    margin: 170px -5px 0;
+    padding-bottom: 10px;
+    padding-top: 10px;
 	}
 
 	.mainnav {
